<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg2"
    android:orientation="vertical"
    android:weightSum="5">

   <!-- <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@mipmap/bg_top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/home_margin"
            android:layout_marginTop="@dimen/home_margin"
            android:layout_weight="1"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_marginLeft="@dimen/home_margin"
                android:background="@drawable/img_style_1"
                android:padding="20dp"
                android:src="@mipmap/user_head"
                android:scaleType="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tv1"
                style="@style/text_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv"
                android:layout_marginTop="@dimen/home_margin"
                android:text="@string/options_username"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll1"
                style="@style/layout_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv1">

                <TextView
                    style="@style/text_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&#8195;ID:" />

                <TextView
                    android:id="@+id/tv2"
                    style="@style/text_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_id" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                style="@style/layout_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll1">

                <TextView
                    style="@style/text_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&#8195;登录时间:" />

                <TextView
                    android:id="@+id/tv3"
                    style="@style/text_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_login_time" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                style="@style/layout_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll2">

                <TextView
                    style="@style/text_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&#8195;在线时间:" />

                <TextView
                    android:id="@+id/tv4"
                    style="@style/text_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_online_time" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll4"
                style="@style/layout_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll3">

                <TextView
                    style="@style/text_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&#8195;岗位:" />

                <TextView
                    android:id="@+id/tv5"
                    style="@style/text_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_work" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll5"
                style="@style/layout_style1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll4"
                android:layout_marginBottom="27dp">

                <TextView
                    style="@style/text_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&#8195;状态:" />

                <TextView
                    android:id="@+id/tv6"
                    style="@style/text_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/options_status" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
<View android:layout_width="match_parent"
        android:layout_height="3dp"
    android:background="@drawable/side_nav_bar"
    />-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/home_margin"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/home_button_margin2"
                android:drawableTop="@mipmap/message_l"
                android:layout_weight="1"
                android:onClick="click1"
                android:text="@string/btn_click1" />

            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/check_l"
                android:onClick="click2"
                android:text="@string/btn_click2" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/home_button_margin1"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/individuality1_l"
                android:onClick="click3"
                android:text="@string/btn_click3" />

            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/chubb_l"
                android:onClick="click4"
                android:text="@string/btn_click4" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/home_button_margin1"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/individuality3_l"
                android:onClick="click5"
                android:text="@string/btn_click5" />
            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/chubb_l"
                android:onClick="click6"
                android:text="@string/btn_click6" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/home_button_margin1"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/individuality2_l"
                android:text="@string/btn_click7"
                android:onClick="click7"/>
            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/individuality3_l"
                android:onClick="click8"
                android:text="@string/btn_click8" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/home_button_margin1"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/find_l"
                android:onClick="click9"
                android:text="@string/btn_click9" />
            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/find_l"
                android:onClick="click10"
                android:text="@string/btn_click10" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="@dimen/home_button_margin1"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="18dp"
            >

            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/find_l"
                android:onClick="click11"
                android:text="@string/btn_click11" />
            <Button
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/home_button_margin2"
                android:layout_weight="1"
                android:drawableTop="@mipmap/setting_l"
                android:onClick="click12"
                android:text="@string/btn_click12" />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>